Added fronted playground to replace postman.